--- a/index.html
+++ b/index.html
@@ -20,30 +20,30 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class=" nav navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link"href="#menu">Menu</a>
+                <a class="nav-link"href="#catering">Menu</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link"href="#resume">online ordering</a>
+                <a class="nav-link"href="#">online ordering</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link"href="#skills">contact us</a>
+                <a class="nav-link"href="#contact">contact us</a>
             </li>                     
           </ul> 
-          <ul class=" nav navbar-nav ml-auto">
-            <li class="nav-item active">
+          <ul class=" icon nav navbar-nav ml-auto">
+            <li class="logo nav-item active">
               <a class="btn-floating btn-fb mx-1" href="">
                 <i class="fab fa-instagram"> </i>
             </a>
             </li>
-            <li class="nav-item">
+            <li class="logo nav-item">
               <a class="btn-floating btn-tw mx-1" href="">
                 <i class="fab fa-facebook-f"> </i>
             </a>
             </li>
-            <li class="nav-item">
+            <li class="logo nav-item">
               <a class="btn-floating btn-gplus mx-1">
                 <i class="fab fa-twitter"></i>
             </a>
@@ -51,7 +51,7 @@
           </ul>                 
         </div>
     </nav>   
-    <section class="home">
+    <section class="home" id="home">
       <div class="center">
         <p>- BOUTIQUE FACTORY -</p>
       </div>
@@ -72,6 +72,58 @@
       </div>
     </div>
     </section>
+    <section class="demo">
+        <video  loop autoplay muted >
+           <source type="video/mp4" src="images/production ID_4458664.mp4"></source>      
+        </video>
+    </section> 
+    <section class="catering" id="catering">
+      <div class="row">
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
+          <h5>Catering & Events</h5>
+          <h6>FOR THE SWEETEST MOMENTS IN LIFE</h6>
+          <p>I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me to add your own content and make changes to the font. Feel free to drag and drop me anywhere you like on your page. I’m a great place for you to tell a story and let your users know a little more about you.</p>
+        </div>  
+        <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12">
+          <img src="images/img1.jpg" alt="img1" class="img-fluid">
+          <img src="images/img2.jpg" alt="img2" class="img-fluid">
+        </div> 
+        <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12">
+          <img src="images/img3.jpg" alt="img3" class="img-fluid">
+          <img src="images/img4.jpg" alt="img4" class="img-fluid">
+        </div>  
+      </div>
+    </section>
+   <section class="quote">
+      <p>“There is nothing better than a friend, unless it is a friend with chocolate.”</p>
+   </section> 
+   <section class="contact" id="contact">
+    <h3>Contact me</h3>
+    <p>INFO@MYSITE.COM / TEL: 123-456-7890</p>
+    <div class="row">           
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">           
+            <form class="contact-form">
+                <div class="form-group">                      
+                  <input type="text" class="form-control" id="name"  placeholder="Your Name">                      
+                </div>
+                <div class="form-group">                      
+                    <input type="email" class="form-control" id="email"  placeholder="Your Email">                      
+                  </div>
+                <div class="form-group">                      
+                  <input type="text" class="form-control" id="phone" placeholder="Your Phone">
+                </div>                                   
+                <button type="submit" class="msg btn-primary">send message</button>
+              </form>
+        </div>
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
+            <form class="contact-form">
+              <div class="form-group">                      
+                <textarea class="form-control" placeholder="Write a Message" style="min-height: 100px;"></textarea>
+              </div>   
+            </form>
+        </div>
+    </div>
+</section>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>  
